--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="home">
         <form class="Formulario">
             <label for="n1">Primeiro Número:</label><br/>
-            <input id="n1" type="text">
-            <label for="tb1">Base:</label>
+            <input id="n1" type="text"><br/>
+            <label for="tb1">Base:</label><br/>
             <input value=10 id="tb1" type="number">
             <br/>
             <br/>
@@ -39,8 +39,8 @@
             <br/>
             <br/>
             <label for="n2">Primeiro Número:</label><br/>
-            <input id="n2" type="text">
-            <label for="tb2">Base:</label>
+            <input id="n2" type="text"><br/>
+            <label for="tb2">Base:</label><br/>
             <input value=10 id="tb2" type="number">
         </form>
         <br/>
