--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p id="result">Resultado:</p>
     </div>
     <footer>
-        <p>Código fonte: <link href="https://github.com/Marcelojunqueiraf/ConversaoDeBases">//github.com/Marcelojunqueiraf/ConversaoDeBases</link></p>
+        <p>Código fonte: <a target="_blank" href="https://github.com/Marcelojunqueiraf/ConversaoDeBases">github.com/Marcelojunqueiraf/ConversaoDeBases</a></p>
     </footer>
     <script>
         var n1 = document.getElementById("n1")
